--- a/PáginaInicial/html/index.html
+++ b/PáginaInicial/html/index.html
@@ -11,11 +11,20 @@
 </head>
 <body>
     <div class="fundoSite">
+        <div class="header">
+            <img class="logo" src="/PáginaInicial/image/moon.png">
+            <div class="links">
+                <a>Foguete</a>
+                <a>Mensagem do universo</a>
+                <a>Tremor</a>
+                <a>??????</a>
+            </div>
+        </div>
         <div class="telaPrincipal">
             
         </div>
     </div>
-    <script src="../javascript/index.js"></script>
+    <script defer src="../javascript/index.js"></script>
 </body>
 </html>
 
