--- a/PáginaInicial/html/index.html
+++ b/PáginaInicial/html/index.html
@@ -14,17 +14,21 @@
         <div class="header">
             <img class="logo" src="/PáginaInicial/image/moon.png">
             <div class="links">
-                <a>Foguete</a>
-                <a>Mensagem do universo</a>
-                <a>Tremor</a>
-                <a>??????</a>
+                <a id="tremor">Foguete</a>
+                <a id="mensagemLink">Mensagem do universo</a>
+                <a id="tremorLink">Tremor</a>
+                <a id="imagemLink">?????</a>
             </div>
         </div>
         <div class="telaPrincipal">
-            
+            <div id="mensagem" class="mensagem"></div>
+            <img id="imagem" class="imagem" style="display: none;" />
         </div>
     </div>
     <script defer src="../javascript/index.js"></script>
 </body>
 </html>
+
+
+
 
